--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.6.0
+  shared_preferences: ^2.5.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -74,6 +76,7 @@ flutter:
       - assets/images/totebag.jpg
       - assets/images/batik_noder.jpg
       - assets/images/gantungan_bali.jpg
+      - assets/images/doyfrid.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
